--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -18,6 +18,19 @@ defaultContentLanguageInSubdir: false
 removePathAccents: true
 
 ############################
+## SERVER
+############################
+server:
+  headers:
+  - for: /**
+    values:
+      Content-Security-Policy: script-src localhost:1313
+      Referrer-Policy: strict-origin-when-cross-origin
+      X-Content-Type-Options: nosniff
+      X-Frame-Options: ALLOW
+      X-XSS-Protection: 1; mode=block
+      
+############################
 ## MODULES
 ############################
 
